min request checker for update family
